5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1573_1332.log
== TEST (2019-03-11 15:27:34) 
-- CODE:
aresta =3//2(3*5**2)**0.5
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:27:44) 
-- CODE:
aresta =3//2(3*5**2)**0.5
area = 5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta =3//2(3*5**2)**0.5
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:27:56) 
-- CODE:
aresta =3//2(3*5**2)**0.5
area = 5
 
print(round(area, 4))
-- EXECUTION TIME:
0.173931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 1, in <module>
    aresta =3//2(3*5**2)**0.5
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:28:36) 
-- CODE:
aresta =3/2(3*5**2)**0.5
area = 5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta =3/2(3*5**2)**0.5
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:38) 
-- CODE:
aresta =5
area = 3/2(3*5**2)**0.5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2(3*5**2)**0.5
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:55) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:00) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.241337
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:07) 
-- CODE:
aresta =5
area = (3*5**2)**0.5*3/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.187623
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:10) 
-- CODE:
aresta =5
area = (3*5**2)**0.5*3/2
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:24) 
-- CODE:
aresta =5
area = (3*5**2)**0.5*3/2
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:35:27) 
-- CODE:
aresta =5
area = (3*5**2)**0.5*3/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.119806
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:36:01) 
-- CODE:
aresta =5
area = (3*5**2)**0.5*3/2
 
print(round(area(3*5**2)**0.5*3/2, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area(3*5**2)**0.5*3/2, 4))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:19) 
-- CODE:
aresta =5
area = ((3*(aresta**2))**0.5)*3/2
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:24) 
-- CODE:
aresta =5
area = ((3*(aresta**2))**0.5)*3/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.197815
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:05) 
-- CODE:
aresta =5
area = ((3*(aresta**2))**0.5)*3/2.0
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:01) 
-- CODE:
aresta =5
area = ((aresta**2)*(3)**0.5)*3/2.0
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:07) 
-- CODE:
aresta =5
area = ((aresta**2)*(3)**0.5)*3/2.0
 
print(round(area, 4))
-- EXECUTION TIME:
0.177388
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
